# Quadruped-robot-training-platform

./: .env.example  .gitignore  AGENTS.md  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
docs/maintainer/: 00_START_HERE.md  01_PROJECT_OVERVIEW.md  02_BUILD_AND_RUN.md  03_SOURCE_OWNERSHIP.md  04_STARTUP_AND_FRAME_FLOW.md  05_STATE_AND_DATA_FLOW.md  06_UI_PANEL_MAP.md  07_FILE_INDEX.md  08_DEBUGGING_GUIDE.md  09_SAFE_CHANGE_GUIDE.md  10_GLOSSARY.md  11_PHASE_HISTORY.md
frontend/: .gitignore  README.md  index.html  package.json  update.md
frontend/server/: auth.test.ts  auth.ts  database.ts  index.ts
frontend/src/: index.css
frontend/src/components/: Header.tsx  MapPanel.tsx  Panel.tsx  SensorPanel.tsx  SimulationView.tsx  StatusBar.tsx  TrainingPanel.tsx
frontend/src/config/: dataSource.ts
frontend/src/services/: contracts.ts  index.ts  mock.ts
server/: auth.ts  database.ts  index.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: database.rs  mod.rs  models.rs
src/components/: AuthScreen.tsx  ChartsPanel.tsx  RobotPanel.tsx  SceneSidebar.tsx  SimulationView.tsx
src/config/: dataSource.ts
src/services/: authService.ts  contracts.ts  index.ts  mock.ts  real.ts
src/services/auth/: httpAuthAdapter.ts  tauriAuthAdapter.ts  types.ts
src/store/: useAppStore.ts
src/types/: index.ts
vk_gaussian_splatting/: .gitignore  CMakeLists.txt
vk_gaussian_splatting/shaders/: shaderio.h  threedgrt_raytrace.rchit.slang  threedgrt_raytrace.rgen.slang  threedgs_raster.frag.slang  threedgut_raster.frag.slang  threedmesh_raster.frag.slang
vk_gaussian_splatting/src/: app_actions.h  application_state.cpp  application_state.h  data_sources.h  export_preview.cpp  export_preview.h  gaussian_splatting.cpp  gaussian_splatting.h  gaussian_splatting_ui.cpp  gaussian_splatting_ui.h  main.cpp  main_workspace.cpp  main_workspace.h  mesh_set_vk.cpp  mesh_set_vk.h  mock_data_sources.cpp  mock_data_sources.h  ring_buffer.h  splat_set.h
