[package]
name = "quadruped-robot-research"
version = "0.1.0"
description = "Windows desktop shell for the Quadruped Robot Research UI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quadruped_robot_research_lib"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
