[package]
name = "quadruped-robot-research"
version = "0.1.0"
description = "Windows desktop shell for the Quadruped Robot Research UI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quadruped_robot_research_lib"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
scrypt = { version = "0.12.0", features = ["getrandom", "phc"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }

[dev-dependencies]
tempfile = "3.27.0"
